[gd_scene load_steps=11 format=2]

[ext_resource path="res://DatePractice.gd" type="Script" id=1]
[ext_resource path="res://Cocola.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://DatePractice.tres" type="DynamicFont" id=3]
[ext_resource path="res://Cursor.gd" type="Script" id=4]
[ext_resource path="res://floatycursor.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.501961, 1, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "colors"
length = 60.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 11.9, 22.2, 30, 36.2, 46.8, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.592157, 0, 1, 1 ), Color( 0.129412, 0.14902, 0.639216, 1 ), Color( 0.0117647, 0.721569, 0.705882, 1 ), Color( 0.501961, 1, 0, 1 ), Color( 0.0117647, 0.721569, 0.705882, 1 ), Color( 0.129412, 0.14902, 0.639216, 1 ), Color( 0.592157, 0, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "1"
tracks/0/type = "value"
tracks/0/path = NodePath("Button:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Generate Date" ]
}

[sub_resource type="Animation" id=5]
resource_name = "2"
tracks/0/type = "value"
tracks/0/path = NodePath("Button:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Reveal Answer" ]
}

[sub_resource type="DynamicFont" id=6]
size = 63
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="DatePractice" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1279.0
margin_bottom = 724.0
color = Color( 0.501961, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/colors = SubResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 490.0
margin_top = 407.0
margin_right = 790.0
margin_bottom = 457.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Generate Date"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="AnimationPlayer" parent="."]
anims/1 = SubResource( 4 )
anims/2 = SubResource( 5 )

[node name="DateText2" type="Label" parent="."]
margin_left = 1143.0
margin_top = 31.0
margin_right = 1176.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 6 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 349.0
rect_min_size = Vector2( 1280, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateText" type="Label" parent="CenterContainer"]
margin_left = 623.0
margin_top = 143.0
margin_right = 656.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 6 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 272 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sprite"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
